# VisionPipeline-detect-face

./: README.md  pyproject.toml
