[project]
name = "detect-face-lib"
version = "0.1.0"
description = "detect-face-lib is a modular face detection + JSON augmentation toolkit that attaches face detections to det-v1(detections) or track-v1(tracked) payloads produced by earlier stages in the Vision Pipeline."
readme = "README.md"
keywords = ["vision", "face-detection", "retinaface", "tracking", "json"]
authors = [
    { name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }
]
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "retinaface-pytorch>=0.0.7",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
